--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,6 @@
-#You can use MySQL DB with next properties for auto configuration with Spring Boot
-#spring.jpa.database=MYSQL
-#spring.datasource.url=jdbc:mysql://localhost:3306/lardi?useSSL=false
-#spring.datasource.username=root
-#spring.datasource.password=2940063
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+file.directory=D:\\Project\\PhoneBook
+
+spring.profiles.active=mysql,jpa
 
 #Hibernate properties for auto configuration with Spring Boot
 spring.jpa.show-sql = true
