--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-file.directory=D:\\Project\\PhoneBook
-
+# [Choose the one paar of active profiles]
 spring.profiles.active=mysql,jpa
+#spring.profiles.active=file,mock
 
 #Hibernate properties for auto configuration with Spring Boot
 spring.jpa.show-sql = true
